# focal_sum1

./: CMakeLists.txt  README.md
include/: GDAL_focal_sum.h
src/: GDAL_focal_sum_3_to_3.cpp  main.cpp  test.cpp
